k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoy-gw-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: envoy-uplus-mready-gateway-parksmo-gateway-2dbd8411
            port:
              number: 80
        path: /gateway/parksmo(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: envoy-uplus-mready-gateway-parkjw-gateway-dffe9399
            port:
              number: 80
        path: /gateway/parkjw(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: envoy-uplus-mready-gateway-idpark-gateway-8559a4bb
            port:
              number: 80
        path: /gateway/idpark(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: envoy-uplus-mready-gateway-parksmo-textvision-gateway-d5b19a52
            port:
              number: 80
        path: /gateway/textvision/parksmo(/|$)(.*)
        pathType: ImplementationSpecific
